# PiezoJet

./: .gitignore  01_PiezoJet_Equivariant_Response_Jet_Codex_Spec.md  03_PiezoJet_M2_to_M5_Perfection_Tasks.md  04_PiezoJet_Short_Cycle_Continuation_Before_M3.md  05_add.md  AGENTS.md  EXPERIMENT_REGISTRY.md  PIEZOJET_TRAINING_EFFICIENCY_REVIEW.md  README.md  RESPONSE_DATA_BLOCKED.md  config.yaml  help.md  mp.md  pyproject.toml  技术审计说明.md
configs/: response_conventions.yaml
docs/: BEC_RESPONSE_AWARE_PRETRAINING.md  CHATGPT_TRAINING_EFFICIENCY_BRIEF.md  DATA_CATALOG_E_DATA.md  ELECTRONIC_GENERATOR_LONG_TERM_EXPERIMENT_PLAN.md  ELECTRONIC_MIXER_ORACLE_REPORT.md  ELECTRONIC_SCALE_SHAPE_DIAGNOSTIC.md  EXPERIMENTAL_ARCHIVE.md  FULL_PHYSICAL_RETRAIN_V5_REPORT.md  PAPER_FIGURE_MAP.md  PRODUCTION_PATH_MIGRATION_TIKHONOV.md
outputs/: EXPERIMENT_ARTIFACT_INDEX.jsonl  EXPERIMENT_REGISTRY.json
scripts/: audit_jarvis_dfpt.py  benchmark_gradient_fidelity.py  benchmark_losses.py  diagnose_piezo_pipeline.py  download_data.py  evaluate_constant_baselines.py  finalize_experiment_registry_after_process.ps1  inspect_data.py  plot_paper_data_flow.py  plot_paper_electronic_model_class.py  plot_paper_mechanism_boundary.py  plot_paper_method_overview.py  plot_paper_operator_spectrum.py  plot_paper_strict_selection_bias.py  plot_stage_a_adjudication.py  plot_vnext_identifiability.py  precompute_symmetry_targets.py  run_bec_response_aware_server.sh  run_capacity_decomposition_single_material_action.ps1  run_e3nn_direct_control.ps1  run_electronic_response_aware_server.sh  run_exposure_matched_replay.ps1  run_feedback4_experiments.ps1  run_full_corpus_multitask_replay.ps1  run_global_l3_matched_direct_validation.ps1  (+11 more)
(+10355 files in other folders)
