[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "piezojet"
version = "0.1.0"
description = "Equivariant differential-jet learning for crystal piezoelectric response"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torch-geometric",
  "e3nn",
  "pymatgen",
  "spglib",
  "numpy",
  "jarvis-tools",
  "pyyaml",
  "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "symfc"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "error",
  "ignore:`torch\\.jit\\.script` is deprecated.*:DeprecationWarning",
  "ignore:The TorchScript type system doesn't support instance-level annotations.*:UserWarning",
  "ignore:displacements argument in __init__ will be deprecated.*:DeprecationWarning",
  "ignore:forces argument in __init__ will be deprecated.*:DeprecationWarning",
]
